--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>my simple website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident nisi sit eveniet odit minus illum sapiente ipsa, voluptatibus ea. Ullam perspiciatis possimus quos veniam alias minus ratione in sint.</p>
+    </div>
 </body>
 </html>
