added the second and third blog

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>my simple website</h3>
+        <h3>my first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident nisi sit eveniet odit minus illum sapiente ipsa, voluptatibus ea. Ullam perspiciatis possimus quos veniam alias minus ratione in sint.</p>
+    </div>
+    <div>
+        <h3>my second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident nisi sit eveniet odit minus illum sapiente ipsa, voluptatibus ea. Ullam perspiciatis possimus quos veniam alias minus ratione in sint.</p>
+    </div>
+    <div>
+        <h3>my third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident nisi sit eveniet odit minus illum sapiente ipsa, voluptatibus ea. Ullam perspiciatis possimus quos veniam alias minus ratione in sint.</p>
     </div>
 </body>
-</html>
