added guiter man

--- a/index.html
+++ b/index.html
@@ -19,4 +19,12 @@
         <h3>my third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident nisi sit eveniet odit minus illum sapiente ipsa, voluptatibus ea. Ullam perspiciatis possimus quos veniam alias minus ratione in sint.</p>
     </div>
+    <h3>how to push incremental code</h3>
+    <li>git add .</li>
+    <li>git commit -m"added a meaningful commit massage"</li>
+    <li>git push</li>
+    <div>
+        <h3>guiter man</h3>
+        <img src="images/guiter man.jpg" alt="">
+    </div>
 </body>
